# UME

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.privacy-agent  README.md  ROADMAP.md  app.py  codex_setup.sh  env.example  faiss.py  faust.py  faust_stub.py  imp.py  imp_compat.py  mypy.ini  pyproject.toml  ume_cli.py
.github/: dependabot.yml  merge_queue.yml  pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml
adr/: 0001-memory-storage.md
docker/: Dockerfile.api  docker-compose.yml  generate-certs.sh  setup-redpanda-acls.sh
docs/: ACCESS_CONTROL.md  AGING_SCHEDULERS.md  ANGEL_BRIDGE.md  API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  CONFIG_TEMPLATES.md  DAG_EXECUTOR.md  ENV_EXAMPLE.md  FEDERATION.md  GRAPH_LISTENERS.md  GRAPH_MODEL.md  INTEGRATIONS.md  LLM_FERRY.md  MONITORING.md  SELF_HOSTED_RUNNER.md  SSL_SETUP.md  VECTOR_BENCHMARKS.md  WINDOWS_QUICKSTART.md  development_schedule.ics
examples/: agent_integration.py  grpc_agent.py  langgraph_example.py  langgraph_integration.ipynb  letta_example.py  letta_integration.ipynb  memgpt_example.py  memgpt_integration.ipynb  stream_client.py  supermemory_example.py  supermemory_integration.ipynb  vector_backend_plugin.py
frontend/: README.md  app.py  index.html  index.js  package.json  vite.config.js
frontend/src/: App.jsx  ConsentLedger.jsx  ConsentLedger.test.jsx  EdgeList.jsx  EdgeList.test.jsx  GraphView.jsx  GraphView.test.jsx  LedgerHistory.jsx  LedgerHistory.test.jsx  NodeSearch.jsx  NodeSearch.test.jsx  PiiStatus.jsx  PiiStatus.test.jsx  PolicyEditor.jsx  PolicyEditor.test.jsx  Recall.jsx  Recall.test.jsx  Recommendations.jsx  Recommendations.test.jsx
policies/: example.rego
proto/: ume.proto
protos/: events.proto  ume.proto
scripts/: __init__.py  benchmark_redpanda.py  benchmark_vector_store.py  ci_should_run.py  compile_protos.py  setup_dev_env.sh
src/faust/: __init__.py  types.py
src/integrations/: __init__.py  langgraph.py  letta.py  memgpt.py  supermemory.py
src/presidio_analyzer/: __init__.py
src/presidio_anonymizer/: __init__.py
src/testcontainers/: __init__.py  compose.py
src/ume/: __init__.py  agent_orchestrator.py  analytics.py  angel_bridge.py  anonymizer.py  api.py  api_deps.py  async_graph_adapter.py  audit.py  auth_routes.py  auto_snapshot.py  benchmarks.py  client.py  config.py  consent_ledger.py  consumer_demo.py  dag_executor.py  dag_service.py  dashboard_routes.py  document_guru.py  embedding.py  event.py  event_ledger.py  factories.py  feedback_routes.py  graph.py  graph_adapter.py  graph_algorithms.py  graph_queries.py  graph_routes.py  llm_ferry.py  (+42 more)
tests/: README.md  __init__.py  conftest.py  test_adapter_selection.py  test_agent_orchestrator.py  test_alignment_plugins.py  test_analytics.py  test_angel_bridge.py  test_anonymizer.py  test_api.py  test_api_consent.py  test_api_events.py  test_api_graph_history.py  test_api_ledger.py  test_api_mutations.py  test_api_policies.py  test_api_rbac.py  test_api_redact_endpoints.py  test_api_reference.py  test_api_snapshot.py  test_async_client_auth.py  test_async_graph_adapter.py  test_audit_logging.py  test_auto_snapshot.py  test_benchmarks.py  test_ci_should_run.py  test_cli_env.py  test_cli_internal.py  test_cli_smoke.py  test_client_module.py  test_config.py  test_consumer_demo.py  test_coverage_boost.py  test_dag_executor.py  test_dag_executor_unit.py  test_dag_service.py  test_demo_scripts.py  test_detect_secrets_hook.py  test_dev_log_watcher.py  test_document_guru.py  (+72 more)
(+86 files in other folders)
