[tool.poetry]
name = "ume"
version = "0.1.0"
description = ""
authors = ["Ume Bot <ume-bot@example.com>"]
readme = "README.md"
packages = [{include = "ume", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
confluent-kafka = ">=2.4"
fastavro = ">=1.9"
pyyaml = "*" # Using "*" for PyYAML as it's a common practice, but can be pinned down if needed.
neo4j = "*"
networkx = "*"
fastapi = ">=0.110"
jsonschema = "*"
faust-streaming = "*"
pydantic-settings = "^2.9.1"
presidio-analyzer = "^2.2.358"
presidio-anonymizer = "^2.2.358"
spacy = "^3.8.7"


[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
httpx = "*"
pre-commit = "*"
poetry-plugin-export = "*"

[tool.poetry.scripts]
produce_demo = "ume.producer_demo:main"
ume-cli = "ume_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
