[tool.poetry]
name = "ume"
version = "0.1.0"
description = ""
authors = ["Ume Bot <ume-bot@example.com>"]
readme = "README.md"
packages = [
    {include = "ume", from = "src"},
    {include = "ume_client", from = "src"},
    {include = "integrations", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
confluent-kafka = ">=2.4"
fastavro = ">=1.9"
pyyaml = "*" # Using "*" for PyYAML as it's a common practice, but can be pinned down if needed.
neo4j = "*"
networkx = "*"
# Required for analytics calculations in tests
numpy = "*"
# Structured logging
structlog = "*"
# FastAPI >=0.110 requires Pydantic v2 which is compatible with
# pydantic-settings 2.x, so we pin within the current major release.
fastapi = ">=0.110,<1"
jsonschema = "*"
faust-streaming = "*"
faiss-cpu = "*"
protobuf = ">=6,<7"

pydantic = ">=2"
pydantic-settings = ">=2"
presidio-analyzer = "^2.2.358"
presidio-anonymizer = "^2.2.358"
spacy = "^3.8.7"
prometheus-client = "^0.22.1"
watchdog = "^2.3"
grpcio = "*"
redis = "*"
fastapi-limiter = "*"
sse-starlette = "*"
python-multipart = "*"
httpx = "*"
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"



[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
redis = "*"
fastapi-limiter = "*"

pre-commit = "*"
detect-secrets = "*"
poetry-plugin-export = "^1.9.0"
testcontainers = "*"
respx = "^0.22.0"

[tool.poetry.extras]
vector = ["faiss-gpu"]
embedding = ["sentence-transformers"]
policy = ["regopy"]
integrations = []

[tool.poetry.scripts]
produce_demo = "ume.producer_demo:main"
ume-cli = "ume_cli:main"
compile-protos = "scripts.compile_protos:main"


[tool.ruff]
line-length = 88
exclude = ["src/ume/proto/*", "src/ume_client/ume_pb2*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
